@@ -1,6 +1,8 @@
 ver 0.20.14 (not yet released)
 * database
   - simple: fix file corruption in the presence of mount points
+* archive
+  - bz2: fix deadlock
 * fix Solaris build failure
 
 ver 0.20.13 (2017/12/18)
